# MinuitFit

./: CMakeLists.txt  ERChargeYield.csv  ERLightYield.csv  ModelDefinitions.txt  NRChargeYield.csv  NRLightYield.csv  NRTotalYield.csv  README.md  Settings.txt
include/: DataObject.h  FunctionObject.h  FunctionObject.h~  Models.h  Models.h~  SettingsObject.h  SettingsObject.h~
src/: CMakeLists.txt  DataObject.cpp  FunctionObject.cpp  FunctionObject.cpp~  MinuitFit.cpp  MinuitFit.cpp~  Models.cpp  Models.cpp~  SettingsObject.cpp  SettingsObject.cpp~
