cmake_minimum_required (VERSION 3.0)
project(MinuitFit)
list(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})
find_package(ROOT REQUIRED COMPONENTS Minuit)
include(${ROOT_USE_FILE})
include_directories(include)
include_directories(src)
link_directories(src)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY .)
add_subdirectory(src)
